# human-centered-eval-harnesses

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  notebooks.yml  quality.yml
configs/: thresholds.yaml
docs/: 01-why-evaluation-matters.md  02-what-is-an-eval-harness.md  03-testing-strategy.md  04-contributing.md
docs/plans/: 2026-03-19-starter-repository.md
notebooks/: 01_intro_harness.ipynb  02_llm_judge.ipynb  03_rag_eval.ipynb
scripts/: check_notebooks.py  run_eval_suite.py  update_golden_files.py
src/eval_harness/: __init__.py  aggregation.py  dataset.py  exceptions.py  judges.py  metrics.py  reporting.py  runner.py  schemas.py
tests/contract/: test_output_schema_contract.py  test_report_contract.py  test_result_record_contract.py
tests/evals/: test_eval_harness_behavior.py
tests/evals/datasets/: classification_cases.jsonl  generation_cases.jsonl  rag_cases.jsonl  tool_cases.jsonl
tests/evals/mocks/: mock_judge_outputs.json  mock_model_outputs.json
tests/evals/rubrics/: answer_quality.yaml  tool_correctness.yaml
tests/integration/: test_local_harness_flow.py
tests/regression/: test_regression_baselines.py
tests/regression/fixtures/: expected_metrics.json  golden_results.json
tests/unit/: test_aggregation.py  test_dataset.py  test_metrics.py  test_schemas.py
